Adds save button

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -10,4 +10,6 @@
 
 </div>
 
-  <button (click)="goBack()">go back</button>
+<button (click)="save()">save</button>
+<br><br>
+<button (click)="goBack()">go back</button>
