--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,8 +2,13 @@
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </a>
+    </a><button class="delete" title="delete hero"
+      (click)="delete(hero)">
+        x
+    </button>
+    
   </li>
+  
 </ul>
 
 <br><br>
